--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+aiosqlite==0.19.0
 alembic==1.11.1
 annotated-types==0.5.0
 anyio==3.7.1
+asyncpg==0.28.0
 click==8.1.6
 colorama==0.4.6
 fastapi==0.100.1
